# ESC_Controller

./: README.md
BLDC_BluePill_Controller/ControladorBLDC_bluePill/: .cproject  .mxproject  .project
BLDC_BluePill_Controller/ControladorBLDC_bluePill/Core/Inc/: bldc_pinout.h  stm32f1xx_hal_conf.h
BLDC_BluePill_Controller/ControladorBLDC_bluePill/Core/Src/: gpio.c  stm32f1xx_it.c
BLDC_BluePill_Controller/ControladorBLDC_bluePill/Debug/: ControladorBLDC_bluePill.list  objects.list
BLDC_BluePill_Controller/ControladorBLDC_bluePill/Debug/Core/Src/: adc.su  bldc_controller.su  gpio.d  main.cyclo  main.d  main.su  stm32f1xx_it.cyclo  stm32f1xx_it.su  subdir.mk  tim.cyclo  tim.su
BLDC_BluePill_Controller/ControladorBLDC_bluePill/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
BLDC_Controller/BLDC_open_loop/: README.md
BLDC_Controller/BLDC_open_loop/inc/: README.md
BLDC_Controller/BLDC_open_loop/src/: README.md
ControladorBLDC_bluePill/: ControladorBLDC_bluePill Debug.launch  ControladorBLDC_bluePill.ioc
ControladorBLDC_bluePill/Core/Inc/: adc.h  bldc_controller.h  gpio.h  main.h
ControladorBLDC_bluePill/Core/Src/: adc.c  bldc_controller.c  main.c  tim.c
ControladorBLDC_bluePill/Debug/: ControladorBLDC_bluePill.elf  ControladorBLDC_bluePill.map  makefile
ControladorBLDC_bluePill/Debug/Core/Src/: adc.cyclo  bldc_controller.cyclo  bldc_controller.d  gpio.cyclo  gpio.su
worstCase_code_lifesaver_indy2024/controladorRasp_openLoop/: CMakeLists.txt  controlador_openLoop.c
